@@ -1,0 +1,8 @@
+<?php
+
+return [
+    'tx_svconnector-test-module' => [
+        'provider' => TYPO3\CMS\Core\Imaging\IconProvider\SvgIconProvider::class,
+        'source' => 'EXT:svconnector/Resources/Public/Icons/ModuleSvconnector.svg'
+    ]
+];
