@@ -17,7 +17,7 @@
 		}
 	},
 	"require": {
-		"php": ">=7.4.0",
+		"php": "^7.4 || ^8.0 || ^8.1",
 		"ext-simplexml": "*",
 		"typo3/cms-core": "^11.5 || ^12.0"
 	},
