@@ -1,6 +1,7 @@
 <?php
 
 // Register the backend module
+// TODO: remove when compatibility with TYPO3 11 is dropped
 \TYPO3\CMS\Extbase\Utility\ExtensionUtility::registerModule(
     'Svconnector',
     // Make it a submodule of 'Admin Tools'
