@@ -1,5 +1,10 @@
 2022-12-18 Francois Suter (Idéative)  <typo3@ideative.ch>
 
+    * Ensure compatibility with TYPO3 12, resolves #24
+	* Ensure compatibility with PHP 8.1
+
+2022-12-18 Francois Suter (Idéative)  <typo3@ideative.ch>
+
 	* Implement new connector service registration API, resolves #23
 	* Adapt to new backend modules templating, resolves #25
 	* Streamline retrieval of language service, resolves #26
@@ -10,7 +15,7 @@
 
 2021-09-07 Francois Suter (Idéative)  <typo3@ideative.ch>
 
-	* Ensure compatibility with PHP 8
+	* Ensure compatibility with PHP 8.0
 
 2021-04-06 Francois Suter (Idéative)  <typo3@ideative.ch>
 
